<resources>
    <string name="app_name">AnimeSuggest</string>
    <string name="search_hint">Search</string>
    <string name="app_label">AnimeSuggest</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="press">Press</string>
    <string name="popular_this_season">POPULAR THIS SEASON</string>
    <string name="upcoming_next_season">UPCOMING NEXT SEASON</string>
    <string name="all_time_popular">ALL TIME POPULAR</string>
    <string name="view_all">View All</string>
    <string name="japanese">JAPANESE</string>
    <string name="genre">GENRE</string>
    <string name="description">DESCRIPTION</string>
    <string name="air_date">AIR DATE</string>
    <string name="score">SCORE</string>
    <string name="rank">RANK</string>
    <string name="end_date">END DATE</string>
    <string name="title_random">Random</string>
    <string name="unavailabletitle">Title Not Available</string>
    <string name="suggestions">SUGGESTIONS</string>

</resources>
