<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".AnimePageFragment">

        <LinearLayout
            android:id="@+id/anime_background_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            tools:context="com.example.animesuggest.AnimePageFragment">

            <TextView
                android:id="@+id/displayromanji"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/displaypic"
                android:layout_width="230dp"
                android:layout_height="350dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:maxWidth="230dp"
                android:maxHeight="350dp"
                android:minWidth="230dp"
                android:minHeight="350dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="-340dp"
                android:layout_marginEnd="100dp"
                android:text="@string/genre"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/genredisplay"
                android:layout_width="189dp"
                android:layout_height="62dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="-12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="100dp"
                android:text="@string/air_date"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/airdatedisplay"
                android:layout_width="72dp"
                android:layout_height="45dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="80dp" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="16dp"
                android:layout_gravity=""
                android:layout_marginStart="350dp"
                android:layout_marginTop="-64dp"
                android:layout_marginEnd="100dp"
                android:text="@string/end_date"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/enddatedisplay"
                android:layout_width="64dp"
                android:layout_height="46dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="141dp"
                android:text="@string/score"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/scoredisplay"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="80dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="350dp"
                android:layout_marginTop="-64dp"
                android:layout_marginEnd="38dp"
                android:text="@string/rank"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/rankdisplay"
                android:layout_width="87dp"
                android:layout_height="45dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="-12dp" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="153dp"
                android:text="@string/japanese"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/displaynative"
                android:layout_width="145dp"
                android:layout_height="111dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="-150dp"
                android:layout_marginBottom="71dp"
                android:textSize="15sp" />

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-60dp"
                android:layout_marginBottom="230dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-205dp"
                android:layout_marginBottom="3dp"
                android:text="@string/description"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/displaydescription"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="29dp"
                android:layout_marginBottom="0dp" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="600dp"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_marginRight="5dp"-->
            <!--                android:layout_marginLeft="10dp"-->
            <!--                >-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/suggestions"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerview_animefrag_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.03"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_animefrag_id"
                    android:layout_width="match_parent"
                    android:layout_height="900dp"
                    android:layout_gravity="center|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                </androidx.recyclerview.widget.RecyclerView>

                <!--            </LinearLayout>-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>